# zintzxingcppdemo

./: .gitattributes  CMakeLists.txt  CMakeLists.txt.deps  README.md  ZintZXingCppDemo.bat  ZintZXingCppDemo.sh  ZintZXingCppDemoFuzzer.sh  ZintZXingCppDemoSanitize.sh  ZintZXingCppDemoUpstream.sh  ZintZXingCppDemoValgrind.sh  fix-zint-exported-include-directories.diff  fix-zxing-cpp-array-out-of-bounds.diff  windowsenv.bat
cmake/: deps.cmake
patches/: zxing-cpp-2.0.0-9a36d24e.diff
src/: CMakeLists.txt  barcode.cpp  barcode.h  barcodetest.cpp  barcodetest.h  main.cpp  rgbpixeldata.cpp  rgbpixeldata.h  test.cpp  test.h  testoptions.cpp  testoptions.h  zint-crash-20231120-1.c  zint-crash-20231122-1.c  zint-crash-20231124-1.c  zint-crash-20231125-1.c  zint-crash-20231126-1.c  zint-crash-20231126-2.c  zint-crash-20231126-3.c  zint-crash-20231126-4.c  zint-crash-20231126-5.c  zint-crash-20231126-6.c  zint-crash-20231127-1.c  zint-crash-20231127-2.c  zint-crash-20231127-3.c  zint-crash-20231128-1.c  zint-crash-20231205-1.c  zint-crash-20231208-1.c
